Add run_tests.py script

--- a/versions.cfg
+++ b/versions.cfg
@@ -166,7 +166,7 @@ schematics = 1.1.1
 
 # Required by:
 # mr.developer==1.31
-setuptools = 7.0
+# setuptools = 38.2.4
 
 # Required by:
 # cornice==0.17
@@ -330,10 +330,10 @@ pycrypto = 2.6.1
 grequests = 0.2.0
 
 # Added by buildout at 2015-09-22 13:06:13.920992
-cffi = 1.4.1
-cryptography = 1.2.3
-idna = 2.0
-pyOpenSSL = 0.15.1
+cffi = 1.7
+cryptography = 2.1.4
+idna = 2.1
+pyOpenSSL = 17.5.0
 
 # Required by:
 # cryptography==1.0.1
@@ -421,3 +421,21 @@ functools32 = 3.2.3-2
 # openprocurement.schemas.dgf==1.0.7
 # schematics-flexible==0.1.2
 jsonschema = 2.6.0
+
+# Added by buildout at 2017-12-21 13:00:27.410594
+asn1crypto = 0.24.0
+
+# Required by:
+# cryptography==1.8.2
+packaging = 16.8
+
+# Required by:
+# packaging==16.8
+pyparsing = 2.2.0
+
+# Added by buildout at 2018-02-05 18:39:42.239590
+
+# Required by:
+# mr.developer==1.31
+# openprocurement.concord==0.5
+setuptools = 38.5.0
