Update source for openprocurement.api
* Update cornice, pyramid and WebOb versions

--- a/base.cfg
+++ b/base.cfg
@@ -34,7 +34,7 @@ gh_push=git@github.com:
 
 
 [sources]
-openprocurement.api = git ${remotes:gh}openprocurement/openprocurement.api.git pushurl=${remotes:gh_push}openprocurement/openprocurement.api.git branch=a499878011598746_separating_awarding
+openprocurement.api = git ${remotes:gh}openprocurement/openprocurement.api.git pushurl=${remotes:gh_push}openprocurement/openprocurement.api.git branch=ea_core_master
 openprocurement.auctions.core = git ${remotes:gh}openprocurement/openprocurement.auctions.core.git pushurl=${remotes:gh_push}openprocurement/openprocurement.auctions.core.git branch=a499878011598746_separating_awarding
 openprocurement.auctions.flash = git ${remotes:gh}openprocurement/openprocurement.auctions.flash.git pushurl=${remotes:gh_push}openprocurement/openprocurement.auctions.flash.git branch=a499878011598746_separating_awarding
 openprocurement.auctions.dgf = git ${remotes:gh}openprocurement/openprocurement.auctions.dgf.git pushurl=${remotes:gh_push}openprocurement/openprocurement.auctions.dgf.git branch=a499878011598746_separating_awarding
