--- a/versions.cfg
+++ b/versions.cfg
@@ -9,7 +9,7 @@ Paste = 1.7.5.1
 PasteDeploy = 1.5.2
 Pygments = 2.0.2
 Sphinx = 1.3.1
-WebOb = 1.5.1
+WebOb = 1.7
 WebTest = 2.0.20
 ZEO = 4.0.0
 ZODB = 4.0.1
@@ -90,7 +90,7 @@ chaussette = 1.2
 
 # Required by:
 # openprocurement.api==0.6
-cornice = 1.2.0.dev0
+cornice = 3.1.0
 
 # Required by:
 # openprocurement.api==0.6
@@ -136,7 +136,7 @@ pyprof2calltree = 1.3.2
 
 # Required by:
 # openprocurement.chronograph==0.0
-pyramid = 1.5.7
+pyramid = 1.9
 
 # Required by:
 # openprocurement.api==0.6
