Add missing '{% end %}' to 'if' statement

--- a/templates/chronograph.ini
+++ b/templates/chronograph.ini
@@ -6,7 +6,7 @@ couchdb.db_name = ${options['couchdb_db']}
 {% if 'couchdb_url' in options %}couchdb.url = ${options['couchdb_url']}{% end %}
 {% if 'couchdb_url' not in options %}couchdb.url = http://${parts['couchdb.ini'].host}:${parts['couchdb.ini'].port}/{% end %}
 {% if 'api_resource' in options %}api.resource = ${options['api_resource']}{% end %}
-{% if 'api_resource' not in options %}api.resource = auctions
+{% if 'api_resource' not in options %}api.resource = auctions{% end %}
 api.url = ${options['api_url']}
 {% if 'api_token' in options %}api.token = ${options['api_token']}{% end %}
 callback.url = ${options['callback_url']}
