Update chronograph.ini template due to new auction pmts configuration

--- a/templates/chronograph.ini
+++ b/templates/chronograph.ini
@@ -12,6 +12,11 @@ api.url = ${options['api_url']}
 callback.url = ${options['callback_url']}
 jobstore_db = ${options['jobstore_db']}
 
+{% if 'auctions' in options %}auctions = ${options['auctions']}
+{% for auction in options['auctions'].split(',') %}
+{% if auction in options %}${auction} = ${options[auction]}
+{% end %}{% end %}{% end %}
+
 pyramid.reload_templates = ${options['debug']}
 pyramid.debug_authorization = false
 pyramid.debug_notfound = false
