--- a/profiles/templates.cfg
+++ b/profiles/templates.cfg
@@ -53,6 +53,9 @@ callback_url = http://${circus.ini:chronograph_host}:${circus.ini:chronograph_po
 jobstore_db = sqlite:///${buildout:directory}/var/jobs.sqlite
 exc_logger = 1
 planning = 1
+auctions = insider,texas,english
+insider = dgfInsider,sellout.insider
+texas = landLease
 
 [logrotate.conf]
 <= config-from-template
